tests/ui/frontmatter/hyphen-in-infostring-non-leading.stderr
error: invalid infostring for frontmatter
  --> $DIR/hyphen-in-infostring-non-leading.rs:1:4
   |
LL | --- Cargo-toml
   |    ^^^^^^^^^^^
   |
   = note: frontmatter infostrings must be a single identifier immediately following the opening

error: aborting due to 1 previous error

