tests/ui/frontmatter/hyphen-in-infostring-non-leading.rs
--- Cargo-toml
//~^ ERROR: invalid infostring for frontmatter
---

// infostrings cannot have hyphens

#![feature(frontmatter)]

fn main() {}
